updating top category section to startups categories

--- a/index.html
+++ b/index.html
@@ -1192,9 +1192,9 @@
 
               <div class="sectionTitle ">
 
-                <h2 class="sectionTitle__title ">Top Categories</h2>
+                <h2 class="sectionTitle__title ">Startup Categories</h2>
 
-                <p class="sectionTitle__text ">Lorem ipsum dolor sit amet, consectetur.</p>
+                <p class="sectionTitle__text ">Our startups categories .</p>
 
               </div>
 
